Update training.md